--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@pooltogether/tightbeam": "^1.0.8",
+    "apollo-boost": "^0.4.7",
+    "apollo-link-state": "^0.4.2",
+    "ethers": "^4.0.44",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "next": "9.2.1",
     "react": "16.12.0",
     "react-dom": "16.12.0"
